testsuite/tests/generic_interfaces/duplicate_node_implements/test.out
== foo.lkt ==
foo.lkt:14:1: error: Interface is implemented multiple times by BarNode
14 | class BarNode: FooNode implements Interface, Interface {
   | ^


lkt_compile: Done
